--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,783 @@ code {
 .cursor {
   cursor: pointer;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-sizing: border-box;
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-style: normal;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  line-height: 1;
+  -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.hide {
+  display: none;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+main,
+menu,
+nav,
+section,
+summary {
+  display: block;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: white;
+  font-family: "Alegreya Sans SC", sans-serif;
+  margin: 0;
+
+  &:focus {
+    outline: none;
+  }
+
+  &::placeholder {
+    color: white;
+  }
+}
+
+input {
+  border: 1px solid white;
+  border-radius: 5px;
+  color: white;
+}
+
+td,
+th {
+  padding: 0;
+}
+
+button,
+input,
+select,
+textarea {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+  vertical-align: top;
+  border: 0;
+}
+
+img.svg-img {
+  height: 100%;
+  width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+tbody,
+tr,
+th,
+td,
+figure,
+header,
+footer,
+menu,
+nav,
+section,
+audio,
+video,
+button {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  list-style: none;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+h1 {
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-style: normal;
+  font-size: 50px;
+  letter-spacing: 0.025em;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 36px;
+  letter-spacing: 0.005em;
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-style: normal;
+  color: white;
+}
+
+h3 {
+  font-size: 34px;
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-style: normal;
+  color: white;
+}
+
+h4 {
+  font-size: 30px;
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-style: normal;
+  color: white;
+}
+
+h5 {
+  font-size: 26px;
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-style: normal;
+}
+
+h6 {
+  font-size: 24px;
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-style: normal;
+}
+
+.v-middle-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.v-middle-inner {
+  display: table;
+  position: relative;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.v-middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.font-12 {
+  font-size: 12px !important;
+}
+
+.font-14 {
+  font-size: 14px !important;
+}
+
+.font-16 {
+  font-size: 16px !important;
+}
+
+.font-17 {
+  font-size: 17px !important;
+}
+
+.font-18 {
+  font-size: 18px !important;
+}
+
+.font-20 {
+  font-size: 20px !important;
+}
+
+.red-btn {
+  border: 1px solid white;
+}
+
+.black-btn {
+  border: 1px solid white;
+  cursor: pointer;
+  padding: 5px 20px 5px;
+  border-radius: 3px;
+}
+a:hover {
+  text-decoration: none;
+}
+label {
+  mobile {
+    font-size: 14px;
+  }
+
+  ipad {
+    font-size: 16px;
+  }
+
+  ipadpro1 {
+    font-size: 18px;
+  }
+
+  desktop {
+    font-size: 20px;
+  }
+
+  bigscreens {
+    font-size: 24px;
+  }
+
+  largescreens {
+    font-size: 26px;
+  }
+
+  extralargescreens {
+    font-size: 28px;
+  }
+}
+
+.style-1::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: black;
+}
+
+.style-1::-webkit-scrollbar {
+  width: 4px;
+  background-color: #f5f5f5;
+}
+
+.style-1::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: red;
+}
+
+extralargescreens {
+  h1 {
+    font-size: 44px;
+  }
+
+  h2 {
+    font-size: 34px;
+  }
+
+  h3 {
+    font-size: 32px;
+  }
+
+  h4 {
+    font-size: 28px;
+  }
+
+  h5 {
+    font-size: 24px;
+  }
+
+  h6 {
+    font-size: 22px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+  .para-18 {
+    font-size: 16px;
+  }
+
+  .para-22 {
+    font-size: 20px;
+  }
+}
+
+largescreens {
+  .container {
+    padding: 0 40px;
+  }
+}
+
+/**
+ * max-width 1023px and min width 768px
+ */
+bigscreens {
+  h1 {
+    font-size: 40px;
+  }
+
+  h2 {
+    font-size: 32px;
+  }
+
+  h3 {
+    font-size: 30px;
+  }
+
+  h4 {
+    font-size: 26px;
+  }
+
+  h5 {
+    font-size: 23px;
+  }
+
+  h6 {
+    font-size: 20px;
+  }
+
+  .para-18 {
+    font-size: 15px;
+  }
+
+  .para-22 {
+    font-size: 18px;
+  }
+
+  .btn-transparent {
+    font-size: 13px;
+  }
+
+  .btn-blue {
+    font-size: 13px;
+  }
+
+  .btn-yellow {
+    font-size: 12px;
+  }
+}
+
+/**
+ * max-width 767px
+ */
+desktop {
+  p {
+    font-size: 14px;
+  }
+
+  .para-18 {
+    font-size: 14px;
+  }
+
+  .col-two,
+  .col-three,
+  .col-four {
+    width: 100%;
+  }
+}
+
+/**
+ * max-width 767px and min width 596px
+ */
+ipadpro1 {
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 30px;
+  }
+
+  h3 {
+    font-size: 28px;
+  }
+
+  h4 {
+    font-size: 24px;
+  }
+
+  h5 {
+    font-size: 20px;
+  }
+
+  h6 {
+    font-size: 17px;
+  }
+
+  .para-22 {
+    font-size: 16px;
+  }
+
+  .col-five {
+    width: 50%;
+  }
+
+  .red-btn,
+  .white-btn,
+  .transparent-btn {
+    font-size: 16px;
+    padding: 14px 20px 14px;
+  }
+
+  .border-bottom-center:after {
+    bottom: -20px;
+  }
+}
+
+/**
+ * max-width 595px
+ */
+ipad {
+  h2 {
+    padding: 0 20px;
+  }
+
+  .red-btn,
+  .white-btn,
+  .transparent-btn {
+    font-size: 14px;
+    padding: 10px 20px 10px;
+  }
+
+  .border-bottom-center:after {
+    bottom: -13px;
+  }
+}
+
+/**
+ * max-width 595px and min width 481px
+ */
+tablet {
+  h1 {
+    font-size: 32px;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  h3 {
+    font-size: 26px;
+  }
+
+  h4 {
+    font-size: 22px;
+  }
+
+  h5 {
+    font-size: 18px;
+  }
+
+  h6 {
+    font-size: 16px;
+  }
+
+  .para-22 {
+    font-size: 16px;
+  }
+}
+
+/**
+ * max-width 480px
+ */
+mobile {
+  h1 {
+    font-size: 28px;
+  }
+
+  h2 {
+    font-size: 26px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  h5 {
+    font-size: 16px;
+  }
+
+  h6 {
+    font-size: 15px;
+  }
+
+  .para-22 {
+    font-size: 16px;
+  }
+
+  .col-five {
+    width: 100%;
+  }
+}
+
+.form-control {
+  color: white !important;
+  font-size: 24px !important;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  background-color: black;
+  line-height: 1.467;
+  padding: 0 12px;
+  height: 40px;
+  box-shadow: none;
+  -webkit-transition: border 0.25s linear, color 0.25s linear,
+    background-color 0.25s linear;
+  transition: border 0.25s linear, color 0.25s linear,
+    background-color 0.25s linear;
+  width: 100%;
+}
+
+.form-control:focus {
+  border-color: grey !important;
+  background-color: transparent !important;
+  outline: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none !important;
+}
+
+input::-webkit-input-placeholder:after {
+  content: "*";
+  color: red;
+  background: black !important;
+}
+
+toaster .toast-container {
+  .toast {
+    border-radius: 10px;
+    color: red;
+  }
+
+  .toast-close-button {
+    position: absolute;
+    color: gray-400;
+    top: -1px;
+    right: 8px;
+  }
+
+  .toast-progress {
+    height: 2px;
+    opacity: 1;
+  }
+
+  .toast-success {
+    background-color: green;
+    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.1),
+      inset 0 2px 0 0 green;
+
+    .toast-progress {
+      background: black;
+    }
+
+    &:hover {
+      box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1),
+        0 1px 2px 0 rgba(0, 0, 0, 0.1), inset 0 2px 0 0 green;
+    }
+  }
+
+  .toast-error {
+    background-color: red;
+    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.1),
+      inset 0 2px 0 0 red;
+
+    .toast-progress {
+      background: black;
+    }
+
+    &:hover {
+      box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1),
+        0 1px 2px 0 rgba(0, 0, 0, 0.1), inset 0 2px 0 0 red;
+    }
+  }
+}
+
+.toast-top-right {
+  right: 30px;
+}
+
+.autocomplete-container {
+  .input-container {
+    input {
+      background: #000 !important;
+      color: #fff !important;
+      border-bottom: 1px solid #fff !important;
+      border-radius: 0 !important;
+      padding: 0 !important;
+      font-size: 24px !important;
+      margin: 0 0 5px 5px;
+
+      &::placeholder {
+        color: white !important;
+      }
+    }
+
+    &.x i {
+      color: #fff !important;
+    }
+  }
+
+  .not-found {
+    background: #000 !important;
+    position: absolute !important;
+    z-index: 1 !important;
+    left: 10px !important;
+    width: 97% !important;
+    border: 2px solid gray !important;
+  }
+
+  .suggestions-container {
+    margin: 0 0 5px 5px;
+
+    ul {
+      li {
+        a {
+          padding-left: 0 !important;
+        }
+      }
+
+      &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+        border-radius: 10px !important;
+        background-color: black !important;
+      }
+
+      &::-webkit-scrollbar {
+        width: 10px !important;
+        background-color: #f5f5f5 !important;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px !important;
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+        background-color: red !important;
+      }
+    }
+  }
+
+  &::after {
+    font-family: "FontAwesome" !important;
+    content: "\f078" !important;
+    position: relative !important;
+    bottom: 30px !important;
+    float: right !important;
+    font-size: 13px !important;
+  }
+}
+
+highcharts styles .highcharts-background {
+  fill: black !important;
+}
+
+.highcharts-point {
+  fill: #9d0005;
+  stroke: none;
+  mobile {
+    width: 10px;
+  }
+}
+
+.highcharts-axis-labels {
+  text {
+    fill: white !important;
+    font-size: 20px !important;
+    transform: translate(10px, 5px);
+  }
+}
+
+tspan {
+  fill: white;
+  font-size: 20px;
+}
+.highcharts-series {
+  transform: translate(50px, 10px);
+}
+
+.dropdown-item {
+  &:hover,
+  &:active,
+  &:focus {
+    color: red !important;
+    text-decoration: none;
+    background-color: black !important;
+  }
+}
+.subscription-box,
+.form-section {
+  .autocomplete-container .suggestions-container {
+    margin-left: 0 !important;
+  }
+  .ng-autocomplete input {
+    margin-left: 0 !important;
+  }
+}
+.line-0 {
+  line-height: 0;
+}
+
+.subscription-box {
+  .ng-autocomplete {
+    max-width: 600px !important;
+    width: 100% !important;
+  }
+}
+
+.slick-list {
+  overflow: hidden !important;
+  width: 100% !important;
+  height: 395px !important;
+}
+
+.slick-prev {
+  left: 5px !important;
+  z-index: 9 !important;
+}
+
+.slick-next {
+  right: 5px !important;
+}
